<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/classesFragment"
            android:icon="@drawable/ic_classes"
            android:title="@string/menu_classes" />
        <item
            android:id="@+id/attendanceFragment"
            android:icon="@drawable/ic_attendance"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/institutionProfileFragment"
            android:icon="@drawable/ic_institution"
            android:title="@string/menu_institution_profile" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
